[package]
name = "fire-map-server"
version = "0.1.0"
authors = ["admin"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
rand = "0.6.5"
rocket = "0.4.0"
captcha = "0.0.7"
diesel = { version = "1.4.0", features = ["postgres"] }
serde_json = "1.0"
base64 = "0.10.1"
chrono = "0.4"
reqwest = "0.9.15"
quick-xml = "0.14.0"
spade = "1.7.0"
cgmath = "0.17.0"
png = "0.14.0"
threadpool = "1.7.1"
log = "0.4.6"