[package]
name = "fire-map-server"
version = "0.1.0"
authors = ["admin"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.3"
rocket = "0.4.6"
captcha = "0.0.8"
diesel = { version = "1.4.5", features = ["postgres"] }
serde_json = "1.0"
base64 = "0.13.0"
chrono = "0.4"
reqwest = "0.9.15"
quick-xml = "0.20.0"
spade = "1.7.0"
cgmath = "0.17.0"
png = "0.14.0"
threadpool = "1.8.1"
log = "0.4.14"